Switch to Modrinth App, ZGC JVM args, FerriteCore, and Modrinth links
- Add Modrinth App section to Wave -1 as installer/mod manager
- Update JVM arguments to ZGC (-XX:+UseZGC -XX:+ZGenerational)
- Add FerriteCore to Wave 0 Performance section
- Migrate all Wave 0 mod links from CurseForge to Modrinth (39 mods, 1 shaderpack, 1 texture pack)
- Update NeoForge section to reference Modrinth App install
- Update GETTING-STARTED-V3.md with Modrinth App, FerriteCore, Modrinth links